--- a/assets/css/btn.css
+++ b/assets/css/btn.css
@@ -3,14 +3,10 @@
      background-color: #343a40;
      border-color: #343a40;
      display: inline-block;
-     font-weight: 400;
      text-align: center;
      white-space: nowrap;
      vertical-align: middle;
-     -webkit-user-select: none;
-     -moz-user-select: none;
-     -ms-user-select: none;
-     user-select: none;
+     --inherits: .no-select;
      border: 1px solid transparent;
      padding: 0.375rem 0.75rem;
      font-size: 1rem;
@@ -19,6 +15,19 @@
      transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
           border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
      cursor: pointer;
+     margin-right: 1px;
+     margin-left: 1px;
+     -webkit-text-stroke-width: 0.3px;
+}
+
+[class*=btn] {
+     -webkit-touch-callout: none; /* iOS Safari */
+     -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+     -ms-user-select: none; /* Internet Explorer/Edge */
+     user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .btn:hover {
@@ -37,4 +46,16 @@
      color: #fff;
      background-color: #0069d9;
      border-color: #0062cc;
+}
+
+.btn-green {
+     color: #fff;
+     background-color: #00ce3e;
+     border-color: #00ce3e;
+}
+
+.btn-green:hover {
+     color: #fff;
+     background-color: #00a030;
+     border-color: #00a030;
 }
