--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,5 @@
 @media (max-width: 800px) {
-     .container {
+     .container, footer {
           margin-left: 0px;
           margin-right: 0px;
      }
