--- a/assets/css/btn.css
+++ b/assets/css/btn.css
@@ -19,6 +19,11 @@
      margin-left: 1px;
      -webkit-text-stroke-width: 0.3px;
 }
+body[theme=light] [class*=btn] {
+     color: #111111;
+     background-color: #e1e1e1;
+     border-color: #e1e1e1;
+}
 
 [class*=btn] {
      -webkit-touch-callout: none; /* iOS Safari */
@@ -36,25 +41,33 @@
      border-color: #1d2124;
 }
 
-.btn-blue {
+body[theme=light] .btn:hover {
+     color: #eee;
+     background-color: #a1a1a1;
+     border-color: #a1a11a;
+}
+
+.btn-blue,
+body[theme=light] .btn-blue {
      color: #fff;
      background-color: #007bff;
      border-color: #007bff;
 }
 
-.btn-blue:hover {
+.btn-blue:hover,
+body[theme=light] .btn-blue:hover {
      color: #fff;
      background-color: #0069d9;
      border-color: #0062cc;
 }
 
-.btn-green {
+.btn-green, body[theme=light] .btn-green {
      color: #fff;
      background-color: #00ce3e;
      border-color: #00ce3e;
 }
 
-.btn-green:hover {
+.btn-green:hover,body[theme=light] .btn-green:hover {
      color: #fff;
      background-color: #00a030;
      border-color: #00a030;
