--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
      -moz-osx-font-smoothing: grayscale;
      -webkit-font-smoothing: antialiased;
      font-family: "Poppins", sans-serif;
+     -webkit-text-stroke-width: 0.1px;
 }
 
 .container {
@@ -35,6 +36,14 @@ body {
 
 .menu {
      background-color: #2e2e2e;
+     width: 100%;
+     height: 50px;
+     border-radius: 4px;
+     margin-bottom: 11px;
+}
+
+body[theme=light] .menu {
+     background-color: #e9e9e9;
      width: 100%;
      height: 50px;
      border-radius: 4px;
@@ -75,4 +84,10 @@ footer {
      margin-left: 40vh;
      margin-right: 40vh;
      padding: 3px;
+}
+
+body[theme=light] {
+     background-color: snow;
+     color: #101010;
+     -webkit-text-stroke-width: 0.3px;
 }
