--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,19 +35,33 @@ body {
 }
 
 .menu {
-     background-color: #2e2e2e;
+     background: rgba(40, 40, 40);
      width: 100%;
      height: 50px;
      border-radius: 4px;
      margin-bottom: 11px;
 }
 
+body[acrylic=true] .menu {
+     background: rgba(40, 40, 40, .3);
+     backdrop-filter: blur(10px);
+}
+
 body[theme=light] .menu {
-     background-color: #e9e9e9;
+     background: rgb(233, 233, 233);
      width: 100%;
      height: 50px;
      border-radius: 4px;
      margin-bottom: 11px;
+}
+
+body[acrylic=true][theme=light] .menu {
+     background: rgb(233, 233, 233, .3);
+     width: 100%;
+     height: 50px;
+     border-radius: 4px;
+     margin-bottom: 11px;
+     backdrop-filter: blur(10px);
 }
 
 .menu * {
@@ -76,6 +90,13 @@ code, pre, .code {
      -webkit-text-stroke-width: 0.3px;
      -moz-osx-font-smoothing: grayscale;
      --inherits: .no-select;
+}
+
+input {
+     font-family: 'Cascadia Code', bold;
+     -webkit-font-smoothing: antialiased;
+     -webkit-text-stroke-width: 0.3px;
+     -moz-osx-font-smoothing: grayscale;
 }
 
 footer {
